documents/24.03/编译指南.md
# 概述<a name="ZH-CN_TOPIC_0000001806024778"></a>

本文档介绍如何对Cantian引擎源码进行编译，生成Cantian引擎软件包。[图1](#zh-cn_topic_0000001801631373_fig2092784815585)说明了Cantian引擎的编译流程。

**图 1**  Cantian引擎编译流程<a name="zh-cn_topic_0000001801631373_fig2092784815585"></a>  
![](figures/Cantian引擎编译流程.png "Cantian引擎编译流程")

# 准备编译环境<a name="ZH-CN_TOPIC_0000001806184590"></a>

**硬件要求<a name="zh-cn_topic_0000001754552768_section179914360134"></a>**

-   主机数量：1台
-   推荐主机硬件规格：
    -   CPU：4核（64位）
    -   内存：8GB
    -   磁盘空闲空间：100GB

-   ARM架构的主机编译后生成Cantian引擎ARM类型的软件包，X86架构的主机编译后生成Cantian引擎X86类型的软件包

**操作系统要求<a name="zh-cn_topic_0000001754552768_section2010693873617"></a>**

Cantian引擎支持的操作系统（Linux 64-bit）如下，建议Cantian引擎的编译操作系统与运行操作系统一致：

-   CentOS 8.2\(x86\_64\)
-   OpenEuler-22.03-LTS\(aarch64\)

**软件要求<a name="zh-cn_topic_0000001754552768_section1912447143612"></a>**

Cantian引擎编译过程所依赖的软件如[表1 软件依赖](#zh-cn_topic_0000001754552768_table169281834113714)所示。

**表 1**  软件依赖<a name="zh-cn_topic_0000001754552768_table169281834113714"></a>

|所需软件|建议版本|说明|
|--|--|--|
|Docker|>=19.03|用于构建、管理、运行Cantian引擎编译镜像和容器。|
|Git|>=2.18.0|用于下载源码。|


# 版本编译<a name="ZH-CN_TOPIC_0000001852743545"></a>




## 下载源码<a name="ZH-CN_TOPIC_0000001852903501"></a>

本节介绍如何下载Cantian引擎源码以及其他依赖源码。

**前提条件<a name="zh-cn_topic_0000001801512345_section17361818184118"></a>**

已在主机正确安装并配置Git软件。

**操作步骤<a name="zh-cn_topic_0000001801512345_section16845198174112"></a>**

1.  使用root用户登录主机。
2.  创建并进入源码下载目录。

    此处以将源码下载到目录“/ctdb/cantian\_compile”为例进行说明，您可根据实际环境进行替换。

    ```
    mkdir -p /ctdb/cantian_compile
    cd /ctdb/cantian_compile
    ```

3.  执行以下命令下载Cantian引擎源码。

    ```
    git clone https://gitee.com/openeuler/cantian.git
    ```

1.  执行以下命令下载Cantian-Connector-MySQL源码，用于编译Cantian引擎对接MySQL的插件。

    ```
    git clone https://gitee.com/openeuler/cantian-connector-mysql.git
    ```

1.  进入Cantian-Connector-MySQL源码目录，执行以下命令下载MySQL-8.0.26版本源码，用于编译Cantian引擎对接MySQL的插件。

    ```
    cd cantian-connector-mysql
    wget https://github.com/mysql/mysql-server/archive/refs/tags/mysql-8.0.26.tar.gz --no-check-certificate
    tar -zxf mysql-8.0.26.tar.gz
    mv mysql-server-mysql-8.0.26 mysql-source
    ```

    >![](public_sys-resources/icon-note.gif) **说明：** 
    >Cantian引擎源码和Cantian-Connector-MySQL源码的根目录必须在同级目录下，在该示例中，目录的结构如下：
    >ctdb
    >---- cantian\_compile
    >----------cantian
    >----------cantian-connector-mysql
    >----------------mysql-source

## 准备容器镜像<a name="ZH-CN_TOPIC_0000001806024782"></a>

Cantian引擎仅支持在容器内编译，本节介绍两种准备容器镜像的方法：①通过Cantian-Connector-MySQL源码中的Dockerfile文件自行构建容器镜像；②通过Docker Hub直接获取容器镜像。如果执行编译的主机无法连接网络，则可选择第一种方式，否则两种方式任选其一。

**容器镜像依赖软件介绍<a name="zh-cn_topic_0000001817435653_section197590130205"></a>**

如果用户自行制作容器镜像，镜像中需包含[表1](#zh-cn_topic_0000001817435653_table169281834113714)中的依赖软件。

**表 1**  容器镜像依赖软件软件<a name="zh-cn_topic_0000001817435653_table169281834113714"></a>

|所需软件|版本|
|--|--|
|CMake|>=3.14.1|
|automake|1.16.1|
|libtool|2.4.6|
|g++|8.5.0|
|libaio-devel|0.3.109-13|
|pkgconfig|0.29.1-3|
|rpm-build|4.14.3|


**前提条件<a name="zh-cn_topic_0000001817435653_section17361818184118"></a>**

-   已在主机正确安装并配置docker软件，可参考[Docker官方文档](https://docs.docker.com/engine/)进行安装。
-   已[下载Cantian-Connector-MySQL源码](#ZH-CN_TOPIC_0000001852903501)。

**使用Dockerfile构建镜像<a name="zh-cn_topic_0000001817435653_section11199345189"></a>**

介绍如何使用Dockerfile构建编译容器镜像。

1.  使用root用户登录主机。
2.  执行以下命令进入Dockerfile文件所在目录。

    ```
    cd /code_dir/cantian/docker
    ```

    其中，“_code\_dir_”为源码下载到的目录。

    如，以源码下载到“/ctdb/cantian\_compile”为例，执行以下命令：

    ```
    cd /ctdb/cantian_compile/cantian/docker
    ```

1.  构建容器镜像。
    -   当前主机环境为x86时，执行以下命令：

        ```
        docker build -t cantian_dev:latest -f Dockerfile .
        ```

    -   当前主机环境为arm时，执行以下命令：

        ```
        docker build -t cantian_dev:latest -f Dockerfile_ARM64 .
        ```

2.  构建完成后，执行以下命令查看容器镜像。

    “cantian\_dev“即为构建的容器镜像。

    ```
    docker images
    ```

    回显类似如下：

    ![](figures/1705455515494.png)

**通过Docker Hub获取镜像<a name="zh-cn_topic_0000001817435653_section1585783101812"></a>**

介绍如何通过Docker Hub获取编译容器镜像。

1.  使用root用户登录主机。
2.  从Docker Hub获取编译容器镜像。

    ```
    docker pull ykfnxx/cantian_dev:0.1.0
    ```

1.  设置镜像标签。

    ```
    docker tag ykfnxx/cantian_dev:0.1.0 cantian_dev:latest
    ```

2.  执行以下命令查看容器镜像。

    “cantian\_dev“即为从Docker Hub获取的容器镜像，如图所示。

    ```
    docker images
    ```

    回显类似如下：

    ![](figures/1705455515494-0.png)

## 编译源码<a name="ZH-CN_TOPIC_0000001806184594"></a>

本节介绍如何在容器环境编译Cantian引擎源码，并生成Cantian引擎软件包。Cantian-Connector作为Cantian引擎运行的必要组件，会在Cantian引擎的自动化编译脚本中一同编译，并打包进Cantian引擎软件包。

**编译脚本介绍<a name="zh-cn_topic_0000001754552772_section18900146174715"></a>**

build\_cantian.sh是编译过程中的入口脚本，其集成了软件编译和打包的功能。以sh build\_cantian.sh \[option\]执⾏，\[option\]参数说明如[表1](#zh-cn_topic_0000001754552772_table1323046164812)所示。

**表 1**  编译脚本参数说明<a name="zh-cn_topic_0000001754552772_table1323046164812"></a>

|参数选项|功能|
|--|--|
|debug|编译debug版本的软件包，软件包中含有用于调试的符号表文件。|
|release|编译release版本的软件包，软件包中不含有用于调试的符号表文件。|


**前提条件<a name="zh-cn_topic_0000001754552772_section17361818184118"></a>**

-   已成功[构建或获取容器镜像](#ZH-CN_TOPIC_0000001806024782)。
-   已[准备好所有源码](#ZH-CN_TOPIC_0000001852903501)。

**操作步骤<a name="zh-cn_topic_0000001754552772_section7362738114918"></a>**

1.  启动容器。

    Cantian引擎源码提供了容器的启动和初始化脚本container.sh，该脚本可以自动化准备编译Cantian引擎所需的环境设置，推荐使用该脚本启动编译容器。

    1.  使用root用户登录主机。
    2.  执行以下命令进入container.sh所在目录。

        ```
        cd code_dir/cantian/docker
        ```

        其中，“_code\_dir_”为源码下载到的目录。

        如，以源码下载到“/ctdb/cantian\_compile”为例，执行以下命令：

        ```
        cd /ctdb/cantian_compile/cantian/docker
        ```

    3.  执行脚本，启动并进入编译容器。

        ```
        sh container.sh dev
        ```

2.  进入编译脚本目录。

    ```
    cd /home/regress/CantianKernel/build
    ```

1.  执行编译脚本，生成Cantian引擎软件包。

    ```
    sh build_cantian.sh option
    ```

    其中，“_option_”为[表1](#zh-cn_topic_0000001754552772_table1323046164812)中的参数选项，指定编译release或debug版本的软件包。

1.  进入编译目标目录，获取Cantian引擎软件包。

    ```
    cd /tmp/cantian_output
    ```

    回显类似如下表示编译成功：

    ```
    Packing package_name success
    ```

    编译生成的Cantian引擎软件包名如下，请以实际生成的包名为准：

    -   X86：Cantian\__xxx_\_x86\_64\_DEBUG.tgz或Cantian\__xxx_\_x86\_64\_RELEASE.tgz
    -   ARM：Cantian\__xxx_\_aarch64\_DEBUG.tgz或Cantian\_\__xxx_\_aarch64\_RELEASE.tgz

